--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.15"
   },
