--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "i18next": "^24.2.3",
+    "notistack": "^3.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.4.1",
+    "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.4.0",
+    "react-spring": "^9.7.5",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
