--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
