--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "bikram-sambat-js": "^1.0.2",
     "i18next": "^24.2.3",
+    "lucide-react": "^0.488.0",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.4.0",
-    "react-spring": "^9.7.5",
+    "react-select": "^5.10.1",
+    "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
