--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ dist-ssr
 .env
 .package-lock.json
 .package.json
+.App.jsx
+.vite.config.js
+.tailwind.config.js
+*.config.js
+main.jsx
 
 # Editor directories and files
 .vscode/*
