--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
     "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
     "bikram-sambat-js": "^1.0.2",
     "i18next": "^24.2.3",
@@ -23,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.4.0",
