--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
+  "name": "eBiblos",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.0",
+    "appwrite": "^17.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "prop-types": "^15.8.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.3",
     "redux": "^5.0.1",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.5",
+    "@vitejs/plugin-react": "^4.4.1"
   }
 }
