--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
+    "appwrite": "^17.0.2",
     "bikram-sambat-js": "^1.0.2",
+    "html-react-parser": "^5.2.4",
     "i18next": "^24.2.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.488.0",
